se agrego index

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Masterblog</title>
+    <title>MasterBlog</title>
   </head>
   <body>
    <div class="container">
        <div class="row">
            <div class="col">
-               <h1>Bienvenido a Masterblog</h1>
+               <h1>Bienvenido a MasterBlog</h1>
                <p>Este es el blog de los Geek que gustan de programar
-                   
+
                </p>
            </div>
        </div>
