--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
    <div class="container">
        <div class="row">
            <div class="col">
+            <nav class="navbar navbar-dark bg-dark">
+                <span class="navbar-brand mb-0 h1">MasterBlog</span>
+              </nav>
+           </div>
+       </div>
+       <div class="row">
+           <div class="col">
                <h1>Bienvenido a MasterBlog</h1>
                <p>Este es el blog de los Geek que gustan de programar
 
