--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
   </head>
   <body>
    <div class="container">
-       <div class="row">
-           <div class="col">
-               <h1>Bienvenido a MasterBlog</h1>
-               <p>Este es el blog de los Geek que gustan de programar
-
-               </p>
+       <div class="row border shadow">
+           <div class="col col-md-8 offset-md-2">
+               <h1 class="text-center">Bienvenido a MasterBlog</h1>
+               <p>Este es el blog de los Geek que gustan de programar. Aprenderas sobre Frontend, Backend
+                   e informatica.
+                </p>
+                <div class="alert alert-primary text-center" role="alert">
+                    Sigue nuestras noticias e informes por Twitter
+                  </div>
            </div>
        </div>
    </div>
